--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,5 +11,5 @@
     "start_url": ".",
     "display": "standalone",
     "theme_color": "#000000",
-    "backgorund_color": "#FFFFFF"
+    "backgorund_color": "#ffffff"
 }
