--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
     "name": "PWA Weather App",
     "icons": [
         {
-            "src": "/images/logo.png",
+            "src": "/images/Original.png",
             "type": "image/png",
             "sizes": "1024x1024",
             "purpose": "any"
